# jig

./: .gitignore  CHANGELOG.md  ITERATION_LOG.md  LICENSE  PIPELINE_KANBAN.md  README.md  auto_test.py  mkdocs.yml  pyproject.toml  run.py
desktop/: index.html  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
docs/: BUG_REPORT.md  agent-firewall-positioning.md  audit-alpha-0.2.md  awesome-deepseek-agent-guide.md  awesome-deepseek-agent-guide.zh-CN.md  deepseek-gap-analysis.md  framework-comparison-report.md  goals-guide.html  real-project-proposal.md  security-audit-alpha-0.2.md  security-vulnerabilities-alpha-0.2.md  technical-whitepaper-v2.md  technical-whitepaper-v3.md  technical-whitepaper-v4.md  technical-whitepaper.md
docs/blog/: csdn-jig-design-journey-2026-07-23.md  csdn-jig-harness-2026-07-23.md  csdn-jig-intro-2026-07-22.md
docs/guides/: building-agents.md  contributing.md
docs/prd/: task-005-deepseek-optimization-prd.md  task-006-framework-sdk-prd.md  task-006-multi-model-streaming-prd.md  task-006-tauri-native-desktop-prd.md  task-007-008-framework-prd.md  task-007-durable-graph-prd.md  task-007-memory-system-prd.md  task-008-agent-runtime-prd.md
scripts/: README.md  auto_test.py
src/agent_harness/: api.py  (+1 more)
tests/: test_agent_mapping.py  test_agent_runtime.py  test_context_compression.py  test_e2e_loop.py  test_framework_api.py  test_graph_engine.py  test_image_reader.py  test_iteration2.py  test_memory.py  test_skill_parser.py  test_vision_tool.py
(+50 files in other folders)
