[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jig"
version = "0.2.0"
description = "自研多 Agent 编排框架 — 13 个预设角色、4 层记忆、硬约束 Harness"
readme = "README.md"
authors = [{ name = "AgentHarness Contributors" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/luyi14-bits/agent-harness"
Source = "https://github.com/luyi14-bits/agent-harness"
BugReports = "https://github.com/luyi14-bits/agent-harness/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["forge*"]
