[package]
name = "tree-sop-desktop"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "tree_sop_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
